--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-modern-drawer": "^1.2.2",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.4.0"
